--- a/src/Popup.css
+++ b/src/Popup.css
@@ -2,17 +2,19 @@
   width: 300px;
   background-color: #1d1f27;
   color: white;
-  border-radius: 8px;
-  padding: 20px;
+  padding-bottom: 20px;
+  padding-top: 0px;
   text-align: center;
   font-family: 'Arial', sans-serif;
 }
 
 .header {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  margin-top: 10px;
   margin-bottom: 20px;
+  background-color: #3b3a3a;
 }
 
 h1 {
@@ -58,7 +60,8 @@ h1 {
 }
 
 .button-container {
-  margin-top: 20px;
+  margin: 20px;
+  margin-bottom: 10px;
 }
 
 .control-button {
